# wasmflow

./: .gitignore  .mise.toml  CLAUDE.md  COMPONENT_DEVELOPMENT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SETUP.md  WIT_BINDINGS_GUIDE.md  bacon.toml
.cargo/: config.toml
.claude/skills/egui/assets/eframe-template/: Cargo.toml  README.md
.claude/skills/egui/assets/eframe-template/src/: main.rs
.specify/memory/: constitution.md
benches/: json_parser_bench.rs
components/: FOUNDATIONAL_COMPONENTS_PLAN.md  HTTP_COMPONENTS.md  HTTP_COMPONENTS_GAP_ANALYSIS.md  HTTP_COMPONENTS_PHASE2.md  HTTP_COMPONENTS_PHASE3.md  HTTP_COMPONENTS_PHASE4.md  HTTP_COMPONENTS_PHASE5.md  Justfile  LIBRARY.md  MIGRATION_TO_1.1.0.md  README.md  rebuild-old-components.sh
components/.templates/: Cargo.toml  helpers.rs  lib.rs  node-with-ui.wit  node.wit
components/adder/: Cargo.toml  README.md
components/adder/src/: lib.rs
components/body-parser/: Cargo.toml
components/collections/: Justfile
components/constant/: Cargo.toml  Justfile  README.md
components/content-type-header/: Cargo.toml
components/core/: COMPONENT_UPDATE_GUIDE.md  Justfile  PHASE4_LOGIC_COMPONENTS.md
components/data/: BASE_COMPONENTS_NEW.md  Justfile
components/double-number/: BUILD.md  Cargo.toml  Justfile  README.md
components/echo/: Cargo.toml  Justfile  README.md
components/file-reader/: Cargo.toml  Justfile  README.md  build.rs
components/file-reader/src/: lib.rs
components/footer-view/: Cargo.toml
components/footer-view/src/: lib.rs
components/footer-view/wit/: node.wit
components/header-builder/: Cargo.toml
components/html-escape/: Cargo.toml
components/http-cookie-parser/: Cargo.toml  Justfile
components/http-cors-headers/: Cargo.toml  Justfile
components/http-fetch/: Cargo.toml  README.md
components/http-request-parser/: Cargo.toml
components/http-response-builder/: Cargo.toml
components/http-set-cookie-builder/: Cargo.toml  Justfile
components/json-parser/: Cargo.toml  README.md  example_json_parser.wasm
components/json-parser/src/: lib.rs
components/json-parser/wit/: node.wit
components/json-response-builder/: Cargo.toml
components/math/: Justfile
components/mime-type-detector/: Cargo.toml
components/path-matcher/: Cargo.toml
components/query-string-parser/: Cargo.toml
components/route-dispatcher/: Cargo.toml
components/simple-template-render/: Cargo.toml
components/static-file-response/: Cargo.toml
components/status-code-mapper/: Cargo.toml
components/url-path-join/: Cargo.toml
docs/: BUILDING_COMPONENTS.md  HTTP_SERVER_LISTENER.md  component-development.md  setup-with-mise.md  technical_spec.md
examples/: debug_json_parser.rs  test_json_parser.rs  test_large_json.rs
examples/graphs/: http-fetch-demo.json
specs/001-webassembly-based-node/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-lets-focus-on/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ui-customize-currently/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-node-input-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-create-wasm-component/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-continuous-node-can/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-rectangle-selection-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tasks.md.bak  tasks.md.bak2
specs/008-json-parser-a/: IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-reorginize-components-currently/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-wasm-components-core/: PHASE5_MATH_COMPONENTS.md  PHASE6_LIST_COMPONENTS.md  PHASE7_DATA_COMPONENTS.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/builtin/: constants.rs  continuous_example.rs  http_server_listener.rs  math.rs  mod.rs  views.rs  wasm_creator.rs
src/graph/: command.rs  connection.rs  drill_down.rs  execution.rs  graph.rs  mod.rs  node.rs  serialization.rs  state.rs  validation.rs
src/runtime/: capabilities.rs  compiler.rs  continuous.rs  engine.rs  instance_pool.rs  mod.rs  template_generator.rs  wac_integration.rs  wasm_host.rs
src/ui/: app.rs  canvas.rs  code_editor.rs  component_view.rs  dialogs.rs  execution_status.rs  mod.rs  palette.rs  selection.rs  spotlight.rs  theme.rs  wit_ui_renderer.rs
templates/: README.md  component_template.js.tmpl  component_template.py.tmpl  component_template.rs.tmpl  http_component_template.rs.tmpl
tests/: graph_execution_tests.rs  performance_tests.rs  security_tests.rs  serialization_tests.rs  topology_tests.rs  type_checking_tests.rs
tests/common/: mod.rs
tests/contract/: main.rs  (+3 more)
wit/: node.wit
(+226 files in other folders)
