[package]
name = "wasmflow"
version = "0.1.0"
edition = "2021"
authors = ["WasmFlow Team"]
description = "WebAssembly node-based visual composition system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pdoronila/wasmflow"

[workspace]
# Exclude examples and components directories (components must be built separately with wasm target)
exclude = ["examples/*", "components/*"]

[dependencies]
# UI Framework
egui = "0.33"
eframe = { version = "0.33", default-features = true, features = ["default"] }
egui-snarl = { git = "https://github.com/zakarumych/egui-snarl.git", branch = "main" }
egui_code_editor = "0.2.20"
image = { version = "0.25", default-features = false, features = ["png"] }

# WASM Runtime
wasmtime = { version = "27.0", features = ["component-model", "async"] }
wasmtime-wasi = "27.0"
wasmtime-wasi-http = "27.0"
wac-graph = "0.8"

# Graph Management
petgraph = "0.6"
generational-arena = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
rfd = "0.14"
env_logger = "0.11"
log = "0.4"
crc = "3.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
tokio-util = "0.7"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
mockito = "1.0"
wit-bindgen = "0.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# Code Coverage Configuration
# Run with: cargo llvm-cov --all-features --workspace --html
# Or: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
# Install: cargo install cargo-llvm-cov
[package.metadata.llvm-cov]
# Exclude generated code and examples from coverage
no-cfg-coverage = true

[[bin]]
name = "wasmflow"
path = "src/main.rs"

[lib]
name = "wasmflow"
path = "src/lib.rs"

[[bench]]
name = "json_parser_bench"
harness = false
