[package]
name = "adder"
version = "1.0.0"
edition = "2021"
authors = ["WasmFlow Example"]

[workspace]
# This is a standalone crate, not part of the parent workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.30"

[build-dependencies]
wit-component = "0.215"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true
strip = true
