[package]
name = "egui-app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"

# Optional dependencies for additional features
# egui_extras = { version = "0.29", features = ["all_loaders"] }
# egui_plot = "0.29"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
